# cargo.nvim

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: lib.rs
