[package]
edition = "2021"
name = "cargo-nvim"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
once_cell = "1.10.0"
simple-logging = "2.0.2"
async-process = "1.4.0"
async-compat = "0.2.1"
async-std = "1.11.0"

[dependencies.mlua]
git = "https://github.com/modProg/mlua/"
branch = "derive-from_lua"
features = ["luajit", "vendored", "module", "macros", "send", "async"]

[dependencies.nvim]
git = "https://github.com/ModProg/nvim-rust"
